improve alignment issues

--- a/about.css
+++ b/about.css
@@ -30,7 +30,9 @@ h3 {
   font-size: 1.3rem;
   line-height: 1.6;
 }
-
+h3 a {
+  white-space: nowrap;
+}
 img {
   display: block;
   margin: 20px auto;
