--- a/global.css
+++ b/global.css
@@ -59,7 +59,7 @@ nav#mainnav {
   justify-content: space-between;
   font-weight: 800;
   flex-grow: 1;
-  padding: 0 5rem 0 0;
+  padding-right: 4rem;
   white-space: nowrap;
 }
 
